src/objects/FSTR__Orchestrate_Event__e.object
<CustomObject>
    <fields>
        <fullName>FSTR__Event_Data__c</fullName>
        <label>Event Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Number__c</fullName>
        <label>Event Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Replay_Count__c</fullName>
        <label>Event Replay Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Sub_Event_Number__c</fullName>
        <label>Sub Event Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject_Id__c</fullName>
        <label>Subject Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Orchestrate Event</label>
    <pluralLabel>Orchestrate Events</pluralLabel>
</CustomObject>